app1/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
  namespace: demo
spec:
  replicas: 5
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: app-1:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: demo
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
